# Starter

./: .gitignore  README.md  create_package_linux.sh  create_package_win.bat  pyproject.toml
src/starter/: app_run_preparation.py  app_starter.py  common.py  config.py  context.py  create_venv.py  environment_structure.py  logging_settings.py  maginician.py  use_existing_venv.py
src/starter/app_preparation_by_platform/: common.py  linux.py  platform_handler.py  platform_interface.py  windows.py
src/starter/app_preparation_by_type/: common.py  dummy_setup.py  other.py  setup.py  type.py  wheel.py
src/starter/environment_default_content/: default_config_content.py
tests/: conftest.py  test_app_preparation.py  test_by_platform_common.py  test_by_platform_handler.py  test_by_platform_linux.py  test_by_platform_windows.py  test_by_type_dummy_setup.py  test_by_type_other.py  test_by_type_setup.py  test_by_type_wheel.py  test_byt_type_common.py  test_context.py  test_create_env.py  test_environment_structure.py  test_existing_env.py  text_app_starter.py  text_config.py
tests/test_app_preparation/: test_app_preparation.py
tests/test_config/: test_config.py
tests/test_context/: test_context.py
tests/test_dummy_setup/: test_by_type_dummy_setup.py
tests/test_environment_structure/: test_environment_structure.py
tests/test_platform_handler/: test_by_platform_handler.py
