[project]
name = "starter"
version = "0.0.1"
description = ""
authors = [{ name = "Zdenek Novotny", email = "zdenekN61@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<=3.15"
dependencies = []

[tool.poetry]
packages = [{ include = "starter", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "lint (>=1.2.1,<2.0.0)"
]
